--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,8 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
-  Microsoft YaHei, Arial, sans-serif;
+  //font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+  //Microsoft YaHei, Arial, sans-serif;
+  font-family: PingFang SC,Arial,Microsoft YaHei,sans-serif;
 }
 
 label {
