--- a/src/views/login/login.scss
+++ b/src/views/login/login.scss
@@ -76,9 +76,9 @@ $cursor: #909399;
   .show-pwd {
     position: absolute;
     right: 10px;
-    top: 7px;
+    top: 0;
     font-size: 16px;
-    // color: #889aa4;
+     color: #889aa4;
     cursor: pointer;
     user-select: none;
   }
@@ -91,7 +91,7 @@ $cursor: #909399;
 
 .login-content {
   position: relative;
-  top: 20%;
+  top: 25%;
   height: 420px;
   width: 900px;
   border-radius: 8px;
