--- a/src/styles/elem.scss
+++ b/src/styles/elem.scss
@@ -83,4 +83,38 @@
 
 .el-dialog__body {
   padding-bottom: 10px;
+  padding-top: 15px;
+}
+
+.radio {
+  .el-radio__label {
+    display: none;
+  }
+}
+
+.el-table th {
+  font-weight: normal;
+  color: #666;
+}
+
+.el-tabs {
+  > .el-tabs__header {
+    .el-tabs__item {
+      margin: -1px -1px 0px 0;
+    }
+  }
+}
+
+
+
+.card-header {
+  font-size: 15px;
+}
+
+.card-body {
+  font-size: 14px;
+}
+
+.el-form-item--default {
+  margin-bottom: 20px;
 }
