fix: 修改ep size to small

--- a/src/styles/elem.scss
+++ b/src/styles/elem.scss
@@ -1,116 +1,235 @@
-// cover some element-plus styles
+.el-tabs--border-card > .el-tabs__header .el-tabs__item + .el-tabs__item,
+.el-tabs--border-card > .el-tabs__header .el-tabs__item:first-child {
+  margin-left: 0;
+}
 
 .el-breadcrumb__inner,
 .el-breadcrumb__inner a {
   font-weight: 400 !important;
+  font-size: 14px;
 }
 
-
-// dropdown
-.el-dropdown-menu {
-  a {
-    display: block;
-  }
+.el-breadcrumb__inner a:hover,
+.el-breadcrumb__inner.is-link:hover {
+  font-size: 14px !important;
 }
-
-.el-dropdown-menu__item {
-  padding: 6px 12px !important;
-}
-
-
-// el-tooltip,的权重
-.is-dark {
-  z-index: 99999 !important;
-}
-
-
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
-  display: block;
-  height: 10px;
-}
-
-::-webkit-scrollbar-button:vertical:increment {
-  background-color: #fff;
-}
-
-::-webkit-scrollbar-track-piece {
-  background-color: #eee;
-  -webkit-border-radius: 3px;
-}
-
-::-webkit-scrollbar-thumb:vertical {
-  height: 50px;
-  background-color: #ccc;
-  -webkit-border-radius: 3px;
-}
-
-::-webkit-scrollbar-thumb:horizontal {
-  width: 50px;
-  background-color: #ccc;
-  -webkit-border-radius: 3px;
-}
-
 
 .el-row {
   margin-bottom: 10px;
 }
 
+.el-dialog {
+  border-radius: 0;
 
-.el-sub-menu .el-sub-menu__icon-arrow {
-  margin-right: -5px
-}
+  .el-dialog__header {
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5;
 
-.el-table th.el-table__cell {
-  background: #F5F6FA;
-}
+    .el-dialog__title {
+      font-size: 14px;
+      color: #333;
+    }
+  }
 
-
-.el-dialog .el-dialog__footer {
-  padding: 16px 24px;
-  border-top: 1px solid #e5e5e5;
-}
-
-.el-dialog .el-dialog__header {
-  border-bottom: 1px solid #e5e5e5;
-  margin: 0;
-}
-
-.el-dialog__body {
-  padding-bottom: 10px;
-  padding-top: 15px;
-}
-
-.radio {
-  .el-radio__label {
-    display: none;
+  .el-dialog__footer {
+    padding: 15px 20px;
+    border-top: 1px solid #e5e5e5;
   }
 }
 
-.el-table th {
+.el-form-item__label {
   font-weight: normal;
+  font-size: 12px;
   color: #666;
 }
 
+.el-checkbox__label {
+  font-size: 12px;
+}
+
+.el-radio-button--small .el-radio-button__inner,
+.el-input__inner,
+.el-radio.is-bordered,
+.el-textarea__inner,
+.el-checkbox__inner {
+  //border-radius: 0 !important;
+  font-size: 12px;
+}
+
+.el-pagination .el-select .el-input .el-input__inner {
+  border-radius: 0;
+}
+
+.el-pagination.is-background .btn-next, .el-pagination.is-background .btn-prev, .el-pagination.is-background .el-pager li {
+  border-radius: 0;
+}
+
+.el-table th {
+  //font-weight: normal;
+}
+
+.el-table th {
+  background: #F5F6FA;
+  padding: 8px 0 !important;
+
+  &.is-sortable {
+    padding: 0 !important;
+  }
+}
+
+.el-form-item__content {
+  .el-table th {
+    padding: 4px 0 !important;
+  }
+}
+
+.el-table--enable-row-hover .el-table__body tr:hover > td {
+  background: #ecf5ff;
+}
+
 .el-tabs {
+  &.el-tabs--top {
+    &.el-tabs--border-card {
+      border: 0;
+    }
+  }
+
+}
+
+.el-tabs--border-card {
+  .el-tabs__content {
+    padding: 15px 0;
+  }
+
   > .el-tabs__header {
+    background-color: transparent;
+
     .el-tabs__item {
       margin: -1px -1px 0px 0;
+      border: 1px solid #e4e7ed;
+      border-top-width: 2px;
+      background: #f5f7fa;
+
+      &.is-active {
+        border-top: 2px solid #39f;
+        position: relative;
+        top: 1px;
+      }
+    }
+  }
+
+  .el-pagination {
+    padding: 2px 0;
+  }
+}
+
+.el-tabs__item {
+  font-size: 12px;
+}
+
+.el-table__body tr.current-row > td {
+  background-color: #deeeff;
+}
+
+.el-dialog__body {
+  padding: 20px !important;
+}
+
+.el-date-editor .el-range-separator {
+  padding: 0;
+}
+
+.el-tag {
+  border-radius: 0;
+  //padding-right: 5px;
+}
+
+.el-alert {
+  border-radius: 0;
+}
+
+.el-transfer-panel {
+  border-radius: 0;
+}
+
+.el-alert__title {
+  //font-size: 12px;
+}
+
+.el-popover {
+  font-size: 13px;
+}
+
+
+.el-step.is-vertical .el-step__title {
+  font-size: 13px;
+}
+
+.el-step__description.is-process {
+  color: #606266;
+}
+
+.el-form-item__label {
+  padding: 0 18px 0 0;
+}
+
+//.app-container {
+//  .el-tabs--border-card {
+//    .el-tabs__item {
+//      width: 106px;
+//      text-align: center;
+//    }
+//  }
+//}
+
+//.el-alert--info {
+//  color: #555;
+//}
+
+
+.el-form {
+  &.el-form--inline {
+    .el-form-item--small.el-form-item {
+      margin-bottom: 10px !important;
     }
   }
 }
 
+.timeSelect {
+  .el-date-table td {
+    position: sticky;
 
+    &.normal {
+      font-size: 12px;
+    }
+  }
 
-.card-header {
-  font-size: 15px;
 }
 
-.card-body {
+/*解决ie11下el-table出现空白问题*/
+.el-table__header {
+  width: 100% !important;
+}
+
+.el-table__body {
+  width: 100% !important;
+}
+
+.el-step__title {
   font-size: 14px;
+}
+
+.box-card-color {
+  .el-card__header {
+    background-color: #f7f8fa;
+    padding: 14px 20px;
+
+    h5 {
+      margin: 0;
+    }
+  }
+}
+
+.el-button--small {
+  height: 26px !important;
 }
