--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  font-family: Inter, Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, \5fae\8f6f\96c5\9ed1, Arial, sans-serif;
   //font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
   //Microsoft YaHei, Arial, sans-serif;
   //font-family: PingFang SC,Arial,Microsoft YaHei,sans-serif;
