--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -2,8 +2,6 @@
   $subMenuActiveText,
   //菜单背景
   $menuBg,
-  // 鼠标覆盖菜单时的背景
-  $menuHover,
   // 子菜单背景
   $subMenuBg,
   // 鼠标覆盖子菜单时的背景
@@ -46,7 +44,7 @@
     }
 
     .el-scrollbar__bar.is-vertical {
-      right: 0px;
+      right: 0;
     }
 
     .el-scrollbar {
@@ -70,7 +68,7 @@
     }
 
     .svg-icon {
-      margin-right: 16px;
+      margin-right: 10px;
     }
 
     .el-menu {
@@ -80,10 +78,11 @@
     }
 
     // menu hover
-    .submenu-title-noDropdown,
-    .el-submenu__title {
+    .submenu-title-noDropdown:not(.is-active),
+    .el-submenu__title:not(.is-active) {
       &:hover {
-        background-color: $menuHover !important;
+        color: #fff !important;
+        background-color: unset !important;
       }
     }
 
@@ -105,7 +104,7 @@
       }
     }
 
-    & .nest-menu .el-submenu>.el-submenu__title,
+    & .nest-menu .el-submenu > .el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
       background-color: $subMenuBg !important;
@@ -145,7 +144,7 @@
     .el-submenu {
       overflow: hidden;
 
-      &>.el-submenu__title {
+      & > .el-submenu__title {
         padding: 0 !important;
 
         .svg-icon {
@@ -160,8 +159,8 @@
 
     .el-menu--collapse {
       .el-submenu {
-        &>.el-submenu__title {
-          &>span {
+        & > .el-submenu__title {
+          & > span {
             height: 0;
             width: 0;
             overflow: hidden;
@@ -180,7 +179,7 @@
   // 适配移动端, Mobile responsive
   .mobile {
     .main-container {
-      margin-left: 0px;
+      margin-left: 0;
     }
 
     .sidebar-container {
@@ -208,22 +207,22 @@
 
   // when menu collapsed
   .el-menu--vertical {
-    &>.el-menu {
+    & > .el-menu {
       .svg-icon {
         margin-right: 16px;
       }
     }
 
-    .nest-menu .el-submenu>.el-submenu__title,
-    .el-menu-item {
+    .nest-menu .el-submenu > .el-submenu__title,
+    .el-menu-item:not(.is-active) {
       &:hover {
-        // you can use $subMenuHover
-        background-color: $menuHover !important;
+        color: #fff !important;
+        background-color: unset !important;
       }
     }
 
     // the scroll bar appears when the subMenu is too long
-    >.el-menu--popup {
+    > .el-menu--popup {
       max-height: 100vh;
       overflow-y: auto;
 
@@ -248,16 +247,47 @@ body {
   $subMenuActiveText: #f4f4f5;
 
   $menuBg: #304156;
-  $menuHover: #263445;
 
   $subMenuBg: #1f2d3d;
   $subMenuHover: #001528;
 
   @include merge-style(
-      $subMenuActiveText,
-      $menuBg,
-      $menuHover,
-      $subMenuBg,
-      $subMenuHover
+                  $subMenuActiveText,
+                  $menuBg,
+                  $subMenuBg,
+                  $subMenuHover
   );
 }
+
+.el-sub-menu {
+  &.is-active {
+    .el-sub-menu__title {
+      color: #fff !important;
+    }
+  }
+
+  .el-menu-item {
+    height: 40px;
+
+  }
+}
+
+.el-sub-menu__title {
+  &:hover {
+    color: #fff !important;
+  }
+}
+
+.el-menu-item {
+  width: 96%;
+  margin-left: 2%;
+  height: 40px;
+  margin: 4px;
+  border-radius: 10px;
+
+  &.is-active {
+    padding: 2px;
+    background-color: #1677ff;
+  }
+}
+
